First test at reports page.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -383,6 +383,15 @@ section.add-task {
 	clear: both;
 }
 
+
+/* Reports {{{1 */
+
+#reports {
+	clear: both;
+	float: left;
+	margin-top: 1em !important;
+}
+
 /* Footer {{{1 */
 
 footer {
