--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -320,7 +320,7 @@ section.add-task {
 
 /* Register a new account {{{1 */
 
-#register { width: 500px; margin: 2em auto; }
+#register, #register-terms { width: 500px; margin: 2em auto; }
 #register div {
 	clear: left;
 	display: block;
@@ -352,6 +352,13 @@ section.add-task {
 	width: 400px !important;
 	margin: 0 auto;
 }
+
+#register-terms li {
+	margin-left: 3em;
+	/*width: 60%;*/
+}
+
+#register-terms ul { margin-bottom: 1.5em; }
 
 
 /* Account settings {{{1 */
